perf: Port to 1.20.1 Forge